# mcp-web

./: .bandit  .dockerignore  .env.example  .gitignore  .ls-lint.yml  .markdownlint-cli2.jsonc  .markdownlint.json  .markdownlintignore  .pr_agent.toml  .pre-commit-config.yaml  .semgrep.yml  .semgrepignore  .test_durations  .vale.ini  AGENTS.md  COMPREHENSIVE_IMPROVEMENTS_SUMMARY.md  CONTRIBUTING.md  COVERAGE_PROGRESS.md  CURRENT_STATE.md  CURSOR_AGENT_HANDOFF.md  META_ANALYSIS_SESSION_2025_10_15.md  PROJECT_SUMMARY.md  README.md  SECURITY.md  SESSION_SUMMARY_2025-11-15.md  TASKFILE_GUIDE.md  Taskfile.yml  coverage.json  markdownlint-cli2-results.json  package-lock.json  package.json  pyproject.toml  pytest.ini  results.json
.benchmarks/: baseline.json  workflow-tokens-baseline.json  workflow-tokens-history.jsonl
.cursor/: README.md
.cursor/commands/: archive-initiative.md  bump-version.md  commit.md  consolidate-summaries.md  detect-context.md  extract-session.md  generate-plan.md  implement.md  improve-prompt.md  improve-workflow.md  load-context.md  meta-analysis.md  new-adr.md  plan.md  research.md  summarize-session.md  update-docs.md  validate.md  work-routing.md  work-session-protocol.md  work.md
.cursor/rules/: 00_core_directives.mdc  01_python_code.mdc  02_testing.mdc  03_documentation.mdc  04_config_files.mdc  05_windsurf_structure.mdc  06_security_practices.mdc  07_context_optimization.mdc  08_mention_guidance.mdc  09_cursor_rule_system.mdc  10_windsurf_rule_system.mdc
.devcontainer/: Dockerfile  README.md  devcontainer.json  post-create.sh
.github/: dependabot.yml
.github/workflows/: docs-quality.yml  markdown-quality.yml  performance-regression.yml  security-scanning.yml  workflow-quality.yml
.markdownlint/: custom-rules.cjs
.unified/: README.md
.unified/commands/: archive-initiative.yaml  bump-version.md  bump-version.yaml  commit.yaml  consolidate-summaries.yaml  detect-context.yaml  extract-session.yaml  generate-plan.md  generate-plan.yaml  implement.yaml  improve-prompt.md  improve-prompt.yaml  improve-workflow.md  improve-workflow.yaml  load-context.yaml  meta-analysis.yaml  new-adr.md  new-adr.yaml  plan.yaml  research.yaml  summarize-session.md  summarize-session.yaml  update-docs.md  update-docs.yaml  validate.md  validate.yaml  work-routing.yaml  work-session-protocol.yaml  work.md  work.yaml
.unified/rules/: 00_core_directives.md  00_core_directives.yaml  01_python_code.md  01_python_code.yaml  02_testing.md  02_testing.yaml  03_documentation.md  03_documentation.yaml  04_config_files.md  04_config_files.yaml  05_windsurf_structure.md  05_windsurf_structure.yaml  06_security_practices.md  06_security_practices.yaml  07_context_optimization.md  07_context_optimization.yaml  08_mention_guidance.md  08_mention_guidance.yaml  09_cursor_rule_system.md  09_cursor_rule_system.yaml  10_windsurf_rule_system.md  10_windsurf_rule_system.yaml
.unified/schemas/: frontmatter-minimal.json
.windsurf/: .context.md  .doc-hashes.json  .last-meta-analysis  .optimization-cache.json  rules.md  workflow-improvement-analysis.json
.windsurf/docs/: FRONTMATTER_MIGRATION_2025-10-20.md  README.md  automation-scripts.md  batch-operations.md  common-patterns.md  context-loading-patterns.md  directory-structure.md  error-handling-patterns.md  frontmatter-specification.md  index.md  rules-guide.md  rules-index.md  task-system-reference.md  tool-patterns.md  workflow-dependencies.md  workflow-index.md  workflow-routing-matrix.md
.windsurf/rules/: 00_agent_directives.md  00_core_directives.md  01_python_code.md  01_testing_and_tooling.md  02_python_standards.md  02_testing.md  03_documentation.md  03_documentation_lifecycle.md  04_config_files.md  04_security.md  05_operational_protocols.md  05_windsurf_structure.md  06_context_engineering.md  06_security_practices.md  (+16 more)
docs/: AGENTS.md  API.md  ARCHITECTURE.md  CONSTITUTION.md  CURRENT_WORK_STATUS.md  DECISIONS.md  DEPLOYMENT.md  DOCUMENTATION_STRUCTURE.md  FAQ.md  IDE_COMPATIBILITY.md  LOCAL_LLM_GUIDE.md  MODERNIZATION_ROADMAP.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  PROJECT_SUMMARY.md  README.md  TESTING.md  TEST_PERFORMANCE_IMPROVEMENTS.md  TROUBLESHOOTING.md
examples/: basic_usage.py
scripts/: README.md  benchmark_pipeline.py  build_ide_configs.py  check_workflow_tokens.py  dependency_registry.py  doc_coverage.py  extract_action_items.py  extract_action_items.py.backup  file_ops.py  fix_frontmatter.py  generate_indexes.py  manage_optimization_cache.py  restore_workflows.py  run_analysis.sh  run_tests.sh  scaffold.py  test_optimization_idempotency.py  test_trigger_consistency.py  validate_archival.py  validate_documentation.py  validate_frontmatter.py  validate_initiatives.py  validate_rules_frontmatter.py  validate_task_format.py  validate_workflows.py
tests/: __init__.py  conftest.py  sitecustomize.py  test_adr_validation.py  test_file_ops.py  test_markdown_quality.py  test_scaffold.py
(+578 files in other folders)
